@@ -208,13 +208,10 @@ RULE_INT ( Aggro, SittingAggroMod, 35 ) //35%
 RULE_INT ( Aggro, MeleeRangeAggroMod, 10 ) //10%
 RULE_INT ( Aggro, CurrentTargetAggroMod, 0 ) //0% --will prefer our current target to any other; makes it harder for our npcs to switch targets.
 RULE_INT ( Aggro, CriticallyWoundedAggroMod, 100 ) //100%
-RULE_INT ( Aggro, SlowAggroMod, 450 )
-RULE_INT ( Aggro, IncapacitateAggroMod, 500 ) //mez, blind, charm etc etc
-RULE_INT ( Aggro, MovementImpairAggroMod, 175 )
 RULE_INT ( Aggro, SpellAggroMod, 100 )
 RULE_INT ( Aggro, SongAggroMod, 33 )
 RULE_INT ( Aggro, PetSpellAggroMod, 10 )
-RULE_INT ( Aggro, StunAggroMod, 750 )
+RULE_INT ( Aggro, PetAggroAmount, 50 ) //50% of normal aggro.
 RULE_CATEGORY_END()
 
 RULE_CATEGORY ( TaskSystem)
